trying new app.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,11 +53,14 @@
 </head>
 <body>
 
+
+    <div id="navbar"></div>
+    <script src="scripts/loadNavbar.js"></script>
 <section class="hero">
     <div class="container">
         <h1 class="display-4">QR Attendance System</h1>
         <p class="lead">Efficient, Secure, and Easy-to-Use Attendance Management</p>
-        <a href="/choose-signup" class="btn btn-primary btn-lg">Sign Up Now</a>
+        <a href="/choose_signup" class="btn btn-primary btn-lg">Sign Up Now</a>
         <div class="mt-3">
             <a href="/login" class="btn btn-secondary btn-lg">Login</a>
         </div>
