--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/static/css/styles.css">
+    <!--#include virtual="navbar.html" -->
 </head>
 <body>
+    <div id="navbar">
+        <script src="scripts/loadNavbar.js"></script>
+    </div>  
     <div class="container">
         <div class="form-container">
             <h1>Login</h1>
